<resources>
    <string name="app_name">Spr_15_Clean_Architecture_Films</string>
    <string name="search">Найти</string>
    <string name="nothing_found">Ничего не найдено</string>
    <string name="something_went_wrong">Что-то пошло не так</string>

    <string name="poster">ПОСТЕР</string>
    <string name="details">О ФИЛЬМЕ</string>
    <string name="rating">Рейтинг IMDb:</string>
    <string name="year">Год:</string>
    <string name="country">Страна:</string>
    <string name="genre">Жанр:</string>
    <string name="director">Режиссёр:</string>
    <string name="writer">Сценарист:</string>
    <string name="cast">В ролях:</string>
    <string name="plot">Сюжет:</string>

    <string name="movies">Movies</string>
    <string name="persons">Persons</string>
    <string name="info">Info</string>

    <string name="nothing_searched_yet">Вы еще ничего не искали</string>

</resources>