<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView android:id="@+id/errorMessage"
        style="@style/LabelTextStyle"
        android:layout_margin="@dimen/section_margin"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title"
            style="@style/TitleTextStyle"
            android:layout_marginStart="@dimen/title_margin"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Название фильма" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.4" />

        <TextView
            android:id="@+id/ratingLabel"
            style="@style/LabelTextStyle"
            android:layout_marginStart="@dimen/section_margin"
            android:layout_marginTop="32dp"
            android:text="@string/rating"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <TextView
            android:id="@+id/ratingValue"
            style="@style/ValueTextStyle"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="0.0" />

        <TextView
            android:id="@+id/yearLabel"
            style="@style/LabelTextStyle"
            android:layout_marginStart="@dimen/section_margin"
            android:layout_marginTop="@dimen/line_margin"
            android:text="@string/year"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ratingValue" />

        <TextView
            android:id="@+id/yearValue"
            style="@style/ValueTextStyle"
            android:layout_marginTop="@dimen/line_margin"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/ratingValue"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="2024" />

        <TextView
            android:id="@+id/countryLabel"
            style="@style/LabelTextStyle"
            android:layout_marginStart="@dimen/section_margin"
            android:layout_marginTop="@dimen/line_margin"
            android:text="@string/country"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/yearValue" />

        <TextView
            android:id="@+id/countryValue"
            style="@style/ValueTextStyle"
            android:layout_marginTop="@dimen/line_margin"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/yearValue"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="Российская Федерация" />

        <TextView
            android:id="@+id/genreLabel"
            style="@style/LabelTextStyle"
            android:layout_marginStart="@dimen/section_margin"
            android:layout_marginTop="@dimen/line_margin"
            android:text="@string/genre"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/countryValue" />

        <TextView
            android:id="@+id/genreValue"
            style="@style/ValueTextStyle"
            android:layout_marginTop="@dimen/line_margin"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/countryValue"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="Ужасы" />

        <TextView
            android:id="@+id/directorLabel"
            style="@style/LabelTextStyle"
            android:layout_marginStart="@dimen/section_margin"
            android:layout_marginTop="@dimen/line_margin"
            android:text="@string/director"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/genreValue" />

        <TextView
            android:id="@+id/directorValue"
            style="@style/ValueTextStyle"
            android:layout_marginTop="@dimen/line_margin"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/genreValue"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="Юрка Дудь" />

        <TextView
            android:id="@+id/writerLabel"
            style="@style/LabelTextStyle"
            android:layout_marginStart="@dimen/section_margin"
            android:layout_marginTop="@dimen/line_margin"
            android:text="@string/writer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/directorValue" />

        <TextView
            android:id="@+id/writerValue"
            style="@style/ValueTextStyle"
            android:layout_marginTop="@dimen/line_margin"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/directorValue"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="Юрка Дудь" />

        <TextView
            android:id="@+id/castLabel"
            style="@style/LabelTextStyle"
            android:layout_marginStart="@dimen/section_margin"
            android:layout_marginTop="@dimen/line_margin"
            android:text="@string/cast"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/writerValue" />

        <TextView
            android:id="@+id/castValue"
            style="@style/ValueTextStyle"
            android:layout_marginTop="@dimen/line_margin"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/writerValue"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="Юрка Дудь" />

        <TextView
            android:id="@+id/plotTitle"
            style="@style/TitleTextStyle"
            android:layout_marginStart="@dimen/section_margin"
            android:layout_marginTop="32dp"
            android:textSize="@dimen/subtitle_text_size"
            android:text="@string/plot"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/castValue" />

        <TextView
            android:id="@+id/plot"
            style="@style/ValueTextStyle"
            android:layout_marginStart="@dimen/section_margin"
            android:layout_marginTop="@dimen/line_margin"
            android:text="Fuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuck"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/plotTitle"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <Button
            android:id="@+id/showCastButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/section_margin"
            android:layout_marginEnd="@dimen/section_margin"
            android:layout_marginTop="@dimen/section_margin"
            android:text="SHOW CAST"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/plot"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</ScrollView>